[tool.poetry]
name = "line-forecast"
version = "0.1.0"
description = ""
authors = ["Shun Fukusumi <shun.fukusumi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
arrow = "^1.2.2"
requests = "^2.28.1"
line-bot-sdk = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
